tests/baselines/reference/errorWithTruncatedType.errors.txt
tests/cases/compiler/errorWithTruncatedType.ts(10,17): error TS2322: Type '{ propertyWithAnExceedinglyLongName1: string; propertyWithAnExceedinglyLongName2: string; propertyWithAnExceedinglyLongName3: string; propertyWithAnExceedinglyLongName4: string; propertyWithAnExceedinglyLongName5: string; }' is not assignable to type 'string'.


==== tests/cases/compiler/errorWithTruncatedType.ts (1 errors) ====
    var x: {
        propertyWithAnExceedinglyLongName1: string;
        propertyWithAnExceedinglyLongName2: string;
        propertyWithAnExceedinglyLongName3: string;
        propertyWithAnExceedinglyLongName4: string;
        propertyWithAnExceedinglyLongName5: string;
    };
    
    // String representation of type of 'x' should be truncated in error message
    var s: string = x;
                    ~
!!! error TS2322: Type '{ propertyWithAnExceedinglyLongName1: string; propertyWithAnExceedinglyLongName2: string; propertyWithAnExceedinglyLongName3: string; propertyWithAnExceedinglyLongName4: string; propertyWithAnExceedinglyLongName5: string; }' is not assignable to type 'string'.
!!! related TS6241 tests/cases/compiler/errorWithTruncatedType.ts:10:17: Did you mean to access one of these 'propertyWithAnExceedinglyLongName1', 'propertyWithAnExceedinglyLongName2', 'propertyWithAnExceedinglyLongName3', 'propertyWithAnExceedinglyLongName4', 'propertyWithAnExceedinglyLongName5' properties on 'x' instead?
    